--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-README.
+
+  4dsoko -- 4-dimensional sokoban like puzzle.
+
+  concept:
+    4-dimensional soko.
+
+
+  game site:
+    http://www.ukaibutton.com/4dsoko/
+    
+  forum:
+    Why don't you make 4-dimensional game? (Japanese Only)
+    http://toro.2ch.net/test/read.cgi/gamedev/1151809341/
+
+
+                                                 koteitan
+                           http://twitter.com/#!/koteitan
+
