--- a/README
+++ b/README
@@ -1,13 +1,18 @@
-
   4dsoko -- 4-dimensional sokoban like puzzle.
 
   concept:
-    4-dimensional soko.
-
+    4-dimensional sokoban like puzzle.
 
   game site:
     http://www.ukaibutton.com/4dsoko/
-    
+
+  platform:
+    JavaScript / HTML5 Canvas
+
+  how to use:
+    download and open index.html.
+    If you use with IE, excanvas.js is required.
+
   forum:
     Why don't you make 4-dimensional game? (Japanese Only)
     http://toro.2ch.net/test/read.cgi/gamedev/1151809341/
