--- a/README
+++ b/README
@@ -9,8 +9,8 @@
   platform:
     JavaScript / HTML5 Canvas
 
-  how to use:
-    download and open index.html.
+  how to use in offline:
+    download all files and open index.html.
     If you use with IE, excanvas.js is required.
 
   forum:
