fix spelling mistake

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-  4d billiyards -- 4-dimensional billiyards game.
+  4d billiards -- 4-dimensional billiards game.
 
   concept:
-    4-dimensional billiyards game.
+    4-dimensional billiards game.
  
   game site:
     http://www.ukaibutton.com/4dbill/
